test/Dialect/ZKIR/structs_fail_02.zkir
// RUN: zkir-opt %s --split-input-file --verify-diagnostics

func.func @identity(%x: !zkir.felt) -> !zkir.felt {
  // expected-error@+1 {{'zkir.struct' op expects parent op 'builtin.module'}}
  zkir.struct @ComponentA {}
  return %x: !zkir.felt
}
